idea/testData/script/definition/highlighting/errorResolver/script.kts
<info descr="Info"></info><warning descr="Warning"></warning><error descr="Error"></error>
val s = 3
val g = 4

// CHECK_WARNINGS
// CHECK_INFOS